# ProtonUp-Qt

./: .gitattributes  .gitignore  AppImageBuilder.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  translation-language.md
.github/workflows/: appimage-ci.yml  testing-ci.yml
i18n/: pupgui2_cs.ts  pupgui2_da.ts  pupgui2_de.ts  pupgui2_el.ts  pupgui2_es.ts  pupgui2_fi.ts  pupgui2_fr.ts  pupgui2_hi.ts  pupgui2_hu.ts  pupgui2_id.ts  pupgui2_it.ts  pupgui2_ja.ts  pupgui2_ka.ts  pupgui2_nb_NO.ts  pupgui2_nl.ts  pupgui2_nl_TND.ts  pupgui2_pl.ts  pupgui2_pt.ts  pupgui2_pt_BR.ts  pupgui2_ru.ts  pupgui2_sk.ts  pupgui2_sv.ts  pupgui2_ta.ts  pupgui2_tr.ts  pupgui2_uk.ts  pupgui2_vi.ts  pupgui2_zh_Hans.ts  pupgui2_zh_TW.ts  release_i18n.sh  update_i18n.sh
pupgui/: pupgui.py  pupgui_constants.py  pupgui_installdialog.py  pupgui_installdialog_lutris.py  pupgui_installdialog_steam.py  pupgui_lutrisup.py  pupgui_utils.py
pupgui2/: __main__.py  constants.py  ctloader.py  datastructures.py  dbusutil.py  gamepadinputworker.py  heroicutil.py  lutrisutil.py  networkutil.py  pupgui2.py  pupgui2aboutdialog.py  pupgui2ctbatchupdatedialog.py  pupgui2ctinfodialog.py  pupgui2customiddialog.py  pupgui2exceptionhandler.py  pupgui2gamelistdialog.py  pupgui2gitaccesstokendialog.py  pupgui2installdialog.py  pupgui2shortcutdialog.py  steamutil.py  util.py
pupgui2/api/: compattool.py  ctinstaller.py  launcher.py  steamutils.py
share/applications/: net.davidotek.pupgui2.desktop
share/metainfo/: net.davidotek.protonup-qt.appdata.xml  net.davidotek.pupgui2.appdata.xml  net.davidotek.pupgui2.metainfo.xml
share/pupgui2/i18n/: pupgui2_de.qm  (+3 more)
tests/: requirements.txt  test_ctmods.py  test_dbusutil.py  test_heroicutil.py  test_networkutil.py  test_steamutil.py  test_util.py
ui/: protonup_mainwindow.ui  pupgui_mainwindow.ui
(+79 files in other folders)
