[metadata]
name = ProtonUp-Qt
version = 2.15.0
description = Install Wine- and Proton-based compatibility tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidoTek/ProtonUp-Qt
author = DavidoTek
license = GPL-3.0
license_files = 
    LICENSE
project_urls =
    Bug Tracker = https://github.com/DavidoTek/ProtonUp-Qt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
python_requires = >=3.10
install_requires =
    PySide6-Essentials>=6.3.0
    requests>=2.27.0
    vdf @ git+https://github.com/solsticegamestudios/vdf.git@v4.0
    inputs==0.5
    pyxdg>=0.27
    steam @ git+https://github.com/solsticegamestudios/steam.git@v1.6.1
    PyYAML>=6.0
    zstandard>=0.19.0

packages = find:

[options.entry_points]
gui_scripts =
    protonup-qt = pupgui2.pupgui2:main
